// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<form style="display: flex; flex-direction: column; gap: var(--ds-size-2);">
  <div>
    <label
      data-weight="medium"
      for="search-input-controlled"
    >
      Hva leter du etter?
    </label>
    <div>
      <input
        type="search"
        placeholder
        id="search-input-controlled"
        aria-label="Søk"
        value
      >
      <button
        data-icon="true"
        data-variant="tertiary"
        type="reset"
        aria-label="Tøm"
      >
      </button>
      <button
        data-variant="primary"
        type="submit"
      >
        Søk
      </button>
    </div>
  </div>
  <div style="display: flex; gap: var(--ds-size-2); align-items: center;">
    <p
      data-variant="default"
      data-size="sm"
    >
      Hurtigsøk:
    </p>
    <button type="button">
      Læreplaner
    </button>
    <button type="button">
      Skole
    </button>
    <button type="button">
      Eksamen
    </button>
  </div>
</form>
`;

exports[`Form 1`] = `
<form>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</form>
<p
  data-variant="default"
  data-size="md"
  style="margin-top: var(--ds-size-2);"
>
  Søkeord:
</p>
`;

exports[`Preview 1`] = `
<div>
  <input
    placeholder
    aria-label="Søk"
    type="search"
  >
  <button
    data-icon="true"
    data-variant="tertiary"
    type="reset"
    aria-label="Tøm"
  >
  </button>
  <button
    data-variant="primary"
    type="submit"
  >
    Søk
  </button>
</div>
`;

exports[`Variants 1`] = `
<div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="margin-top: var(--ds-size-4);"
  >
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="margin-top: var(--ds-size-4);"
  >
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </div>
</div>
`;

exports[`With Label 1`] = `
<div>
  <label
    data-weight="medium"
    for="components-search--with-label"
  >
    Hva leter du etter?
  </label>
  <div>
    <input
      placeholder
      id="components-search--with-label"
      type="search"
      name="cat-search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</div>
`;
